@@ -112,6 +112,7 @@ BEGIN
   RTEXT		"IY", IDC_DBG_REG_IY, 58, 50, 52, 9
   RTEXT		"I", IDC_DBG_REG_I, 2, 59, 52, 9
   RTEXT		"R", IDC_DBG_REG_R, 58, 59, 52, 9
+  RTEXT		"Halted", IDC_DBG_REG_HALTED, 2, 68, 52, 9
   LTEXT		"T-states", IDC_DBG_REG_T_STATES, 2, 77, 68, 9
   EDITTEXT	IDC_DBG_REG_IM, 68, 68, 42, 27, NOT WS_BORDER | ES_RIGHT | ES_MULTILINE | ES_READONLY
   EDITTEXT	IDC_DBG_REG_FLAGS, 2, 95, 52, 18, NOT WS_BORDER | ES_RIGHT | ES_MULTILINE | ES_READONLY
