@@ -4693,3 +4693,5 @@
 20150316 ui/xlib/xui.c: add casts to silence warnings (Stuart).
 20150316 INSTALL: replace libspectrum's --without-glib with --with-fake-glib
          (Stuart).
+20150316 ui/{gtk/debugger.c,widget/debugger.c,win32/debugger.{c,rc}}: show
+         the status of the halted flag in the debugger (Stuart).
